istio/kiali.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system 
spec:
  ingressClassName: nginx
  rules:
  - host: kiali.amoylabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali 
            port: 
              number: 20001
